# slash

./: .gitignore  LICENSE  README.md  README.rst  meson.build  wscript
.github/workflows/: build.yml
include/slash/: slash.h
linkerscript/: slash.ld
src/: slash.c
test/: example.c  slashtest.c  test.c
